Bug 1590832 - fix Wayland dmabuf texture crash and rendering on Radeon r=stransky

1. Use GBM map/unmap API correctly

The documentation of gbm_bo_unmap describes the second argument as
"map_data opaque ptr returned from prior gbm_bo_map",
which refers to the pointer written to the map_data location by gbm_bo_map,
not the pointer *returned* by gbm_bo_map.

This fixes crashes with widget.wayland-dmabuf-textures.enabled
on the Mesa RadeonSI driver.

2. Set modifier to invalid on the fallback code path

This fixes fCreateImage failure, allowing actual rendering
to happen.

(mBufferModifier was not set to DRM_FORMAT_MOD_INVALID,
so unsupported attributes were added to the CreateImage call)

Differential Revision: https://phabricator.services.mozilla.com/D65239

--HG--
extra : moz-landing-system : lando